fix lots of styling issues

--- a/less/lumi/lumi-icons.html
+++ b/less/lumi/lumi-icons.html
@@ -865,7 +865,11 @@
 			
 		</div>
 
-		
+        
+        <a>
+            <i class="uk-icon-file"></i>
+            <span>Files</span>
+        </a>
 
 		<h1>Usage</h1>
 		<pre><code>&lt;i class=&quot;uk-icon-<span id="name">name</span>&quot;&gt;&lt;/i&gt;</code></pre>
